notetaker-frontend/src/styles.sass
/* You can add global styles to this file, and also import other style files */
@import "~materialize-css/sass/components/_color-variables.scss"
$primary-color: color("amber", "lighten-1") !default
$navbar-height-mobile: 60px
$navbar-height: 60px
@import '~materialize-css/sass/materialize'

.no-margin-top
  margin-top: 0 !important

.small-margin-left
  margin-left: 1rem

.small-margin-right
  margin-right: 1rem

.background-color-transparent
  background-color: transparent !important

.ck.ck-content ul, .ck.ck-content ul li
  list-style-type: inherit

.ck.ck-content ul
  padding-left: 40px

body
  --ck-z-modal: 0

